<resources>
    <string name="app_name">Yamii\'s Applications</string>
    <string name="btnPiano">Piano</string>
    <string name="btnJuegos">Lista de Juegos</string>
    <string name="btnPersonajes">Creador de Personajes</string>
    <string name="doSostenido">Do Sostenido</string>
    <string name="doNormal">Do</string>
    <string name="re">Re</string>
    <string name="mi">Mi</string>
    <string name="fa">Fa</string>
    <string name="sol">Sol</string>
    <string name="la">La</string>
    <string name="si">Si</string>
    <string name="btnVolver">Volver</string>
    <string name="accion">Accion</string>
    <string name="plataforma">Plataformas</string>
    <string name="puzzle">Puzle</string>
    <string name="rol">Rol</string>
    <string name="buscar">Buscar</string>
    <string name="seleccione">Seleccione el genero de juegos a buscar:</string>
    <string name="personaje">Creacion de Personaje</string>
    <string name="codigo">Codigo Personaje</string>
    <string name="nombre">Nombre Personaje</string>
    <string name="vida">Vida</string>
    <string name="mana">Mana</string>
    <string name="clase">Clase</string>
    <string name="habilidad">Cree una habilidad</string>
    <string name="skillComboBox">Skill:</string>
    <string name="skill">Nombre</string>
    <string name="dañoSkill">Daño</string>
    <string name="costeMana">Coste Mana</string>
    <string name="numUsos">Numero de Usos</string>
    <string name="savePersonaje">Guardar</string>
    <string name="modifyPersonaje">Modificar</string>
    <string name="searchPersonaje">Buscar Personaje</string>
    <string name="deletePersonaje">Borrar</string>
    <string name="music">♫</string>
    <string name="camaraFotos">Camara de fotos</string>
    <string name="camaraVideos">Camara de videos</string>
    <string name="grabadora">Grabadora</string>
    <string name="camrafoto">camrafoto</string>
    <string name="bolacristal">bolacristal</string>
    <string name="camaravideo">camaravideo</string>
    <string name="pulsaGrabar">Pulsa en la camara de video para grabar</string>
</resources>