<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    tools:context=".listajuegos">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="171dp"
        android:layout_height="192dp"
        android:layout_marginBottom="480dp"
        android:keepScreenOn="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699">

        <RadioButton
            android:id="@+id/rbAccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play"
            android:text="@string/accion"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/rbRol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play"
            android:text="@string/rol"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/rbPlataforma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play"
            android:text="@string/plataforma"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/rbPuzzle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play"
            android:text="@string/puzzle"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play"
        android:onClick="sendInformation"
        android:text="@string/buscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.614" />

    <Button
        android:id="@+id/btnVolverJuegos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/play"
        android:onClick="back"
        android:text="@string/btnVolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="191dp"
        android:layout_height="39dp"
        android:fontFamily="@font/play"
        android:text="@string/seleccione"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:onClick="playStopMusic"
        android:text="@string/music"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>