<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:onClick="playStopMusic"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="407dp"
        android:layout_height="151dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/btnPiano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play"
            android:onClick="goPiano"
            android:text="@string/btnPiano" />
        <Button
            android:id="@+id/btnJuegos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play"
            android:onClick="goJuegos"
            android:text="@string/btnJuegos" />
        <Button
            android:id="@+id/btnPersonaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play"
            android:onClick="goCharacter"
            android:text="@string/btnPersonajes" />
    </LinearLayout>
    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:onClick="playStopMusic"
        android:text="@string/music"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>